<resources>
    <string name="app_name">Android View Animations Java</string>
    <string name="simple_imageview">Simple Image View</string>

    <string name="text_attention">Attention</string>
    <string name="text_bounce">Bounce</string>
    <string name="text_fade">Fade</string>
    <string name="text_flip">Flip</string>
    <string name="text_rotate">Rotate</string>
    <string name="text_slide">Slide</string>
    <string name="text_zoom">Zoom</string>

    <string name="button_bounce">Bounce</string>
    <string name="button_flash">Flash</string>
    <string name="button_pulse">Pulse</string>
    <string name="button_ruberband">Ruberband</string>
    <string name="button_shake">Shake</string>
    <string name="button_standup">Standup</string>
    <string name="button_swing">Swing</string>
    <string name="button_tada">Tada</string>
    <string name="button_wave">Wave</string>
    <string name="button_wobble">Wobble</string>

    <string name="button_in">In</string>
    <string name="button_inleft">In Left</string>
    <string name="button_inright">In Right</string>
    <string name="button_inup">In Up</string>
    <string name="button_inupleft">In Up Left</string>
    <string name="button_inupright">In Up Right</string>
    <string name="button_indown">In Down</string>
    <string name="button_indownleft">In Down Left</string>
    <string name="button_indownright">In Down Right</string>

    <string name="button_out">Out</string>
    <string name="button_outleft">Out Left</string>
    <string name="button_outright">Out Right</string>
    <string name="button_outup">Out Up</string>
    <string name="button_outupleft">Out Up Left</string>
    <string name="button_outupright">Out Up Right</string>
    <string name="button_outdown">Out Down</string>
    <string name="button_outdownleft">Out Down Left</string>
    <string name="button_outdownright">Out Down Right</string>

    <string name="button_inx">In X</string>
    <string name="button_iny">In Y</string>
    <string name="button_outx">Out X</string>
    <string name="button_outy">Out Y</string>
    <string name="Animations">animation</string>
    <string name="draw_by_canvas">Draw by Canvas</string>
    <string name="animations">Animations</string>
    <string name="animations2">Animations</string>
    <string name="draw_by_canvas2">Draw by Canvas</string>

</resources>
